<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>fximu_driver</name>
  <version>1.0.0</version>
  <description>FXIMU serial driver</description>
  <maintainer email="can@acada.dev">Can Altineller</maintainer>
  <license>Apache License 2.0</license>
  <url type="repository">https://github.com/acadadev/fximu_drivers</url>
  <url type="bugtracker">https://github.com/acadadev/fximu_drivers/issues</url>
  <author email="can@acada.dev">ACADA Robotics, Inc.</author>
  <author>Can Altineller</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>asio_cmake_module</buildtool_depend>

  <depend>asio</depend>
  <depend>io_context</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
